--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="publications.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn"></span>Publications</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="publications.html" target="_blank">Publication list</a><a class="text-white dropdown-item display-4" href="https://scholar.google.co.jp/citations?user=fVCyyDgAAAAJ&hl=en" target="_blank" aria-expanded="false">Google Scholar</a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="about.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
                         
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="header1 cid-rJBn3T8pcH" id="header16-10">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header1 cid-rJBn3T8pcH" id="header16-10">
 
     
 
