--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="col-md-10 align-center">
                 
                 <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-5">Guilherme Maeda
-<div><a href="https://preferred.jp/en/" target="_blank">Preferred Networks</a>&nbsp;researcher in robotics and robot motor skill learning
+<div><a href="https://https://ai.sony/" target="_blank">SonyAI</a>&nbsp; researcher in robotics and robot motor skill learning
 </div><div>
 </div><div><strong><br></strong></div><strong><br></strong><div>Eventually, our society will depend on robots as general-purpose helpers that will assist us throughout our entire lives. This vision requires robots capable of learning skills by themselves to manipulate and interact with the world in a way that is useful for us. To this end, my work involves the investigation and design of learning control methods, and their implementation and validation using real robots.&nbsp;<br><br><br></div></h3>
                 
